manifests/dev/art-gallery/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: art-gallery
  labels:
    app: art-gallery
    managed-by: argocd
